@@ -23,6 +23,7 @@
 /ecc-mul-a-test
 /ecc-mul-g-test
 /ecc-redc-test
+/ecdsa-keygen-test
 /ecdsa-sign-test
 /ecdsa-verify-test
 /gcm-test
