@@ -1,5 +1,11 @@
 2013-02-20  Niels Möller  <nisse@lysator.liu.se>
 
+	* ecdsa-keygen.c (ecdsa_generate_keypair): New file and function.
+	* Makefile.in (hogweed_SOURCES): Added ecdsa-keygen.c.
+	* testsuite/ecdsa-keygen-test.c: New testcase.
+	* testsuite/Makefile.in (TS_HOGWEED_SOURCES): Added
+	ecdsa-keygen-test.c.
+
 	* nettle-internal.h (TMP_ALLOC): Added missing parentheses.
 
 2013-02-18  Niels Möller  <nisse@lysator.liu.se>
